Reject all commands when no config file exists
Change loadEmbeddedDefaults() to return an empty config instead of
loading patterns from the embedded config.toml. This ensures mmi
denies all commands by default when no config file is present,
requiring users to explicitly create a config via 'mmi init'.

--- a/internal/config/config.toml
+++ b/internal/config/config.toml
@@ -40,11 +40,7 @@ name = "write to disk"
 
 [[deny.regex]]
 pattern = 'mkfs\.'
-name = "format filesystem"
-
-[[deny.regex]]
-pattern = ':(){:|:&};:'
-name = "fork bomb"
+name = "create filesystem"
 
 # ============================================================
 # WRAPPERS - prefixes stripped before checking the core command
@@ -121,11 +117,6 @@ subcommands = ["develop", "build"]
 [[commands.regex]]
 pattern = '^(true|false|exit(\s+\d+)?)$'
 name = "shell builtin"
-
-# cd (change directory)
-[[commands.regex]]
-pattern = '^cd\s'
-name = "cd"
 
 # source/. for venv activation
 [[commands.regex]]
