Update GoReleaser config and add release documentation
- Fix deprecated GoReleaser syntax: format -> formats, brews -> homebrew_casks
- Move CHANGELOG.md from docs/ to root for inclusion in release archives
- Add LICENSE file (Apache 2.0)
- Add "Creating Releases" section to README with release workflow steps

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -30,11 +30,13 @@ builds:
 
 archives:
   - id: default
-    format: tar.gz
+    formats:
+      - tar.gz
     name_template: "{{ .ProjectName }}_{{ .Version }}_{{ .Os }}_{{ .Arch }}"
     format_overrides:
       - goos: windows
-        format: zip
+        formats:
+          - zip
     files:
       - LICENSE*
       - README*
@@ -71,16 +73,12 @@ release:
   footer: |
     **Full Changelog**: https://github.com/dgerlanc/mmi/compare/{{ .PreviousTag }}...{{ .Tag }}
 
-brews:
+homebrew_casks:
   - name: mmi
     repository:
       owner: dgerlanc
       name: homebrew-tap
     homepage: https://github.com/dgerlanc/mmi
     description: Claude Code Bash command approval hook
-    license: MIT
-    skip_upload: auto
-    install: |
-      bin.install "mmi"
-    test: |
-      system "#{bin}/mmi", "--help"
+    binaries:
+      - mmi
